--- a/theme.css
+++ b/theme.css
@@ -131,22 +131,31 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center center;
 }
 
-.anim-zoom .media {
+.link .media {
   opacity: 1;
   transform: scale(1);
   transition: all 750ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
 }
 
-.anim-zoom:hover .media {
+.link.hover .media {
   opacity: .9;
   transform: scale(1.1);
   transition: all 500ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+}
+
+.hotspot {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 200px;
+  height: 200px;
 }
