--- a/theme-v1.0.css
+++ b/theme-v1.0.css
@@ -127,26 +127,21 @@ body {
   background: #021a46;
 }
 
+/**
+ * media
+ */
+
 .media {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  object-position: center center;
 }
 
-.link .media {
-  opacity: 1;
-  transform: scale(1);
-  transition: all 750ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
-}
-
-.link.hover .media {
-  opacity: .9;
-  transform: scale(1.1);
-  transition: all 500ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+.media svg {
+  width: 100%;
+  height: 100%;
 }
 
 .hotspot {
@@ -158,4 +153,48 @@ body {
   margin: auto;
   width: 200px;
   height: 200px;
+}
+
+/**
+ * animation
+ */
+
+.media #Layer_4 polygon,
+.media #Layer_5 polygon {
+  opacity: 0;
+  transition: all 750ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+  transition-property: opacity;
+}
+
+.link.hover .media #Layer_4 polygon,
+.link.hover .media #Layer_5 polygon {
+  opacity: 1;
+  transition: all 500ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+  transition-property: opacity;
+}
+
+.media #Layer_3 polygon {
+  opacity: .9;
+  transition: all 750ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+  transition-property: opacity;
+}
+
+.link.hover .media #Layer_3 polygon {
+  opacity: 1;
+  transition: all 500ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+  transition-property: opacity;
+}
+
+.link .media {
+  opacity: 1;
+  transform: scale(1);
+  transition: all 750ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+  transition-property: opacity, transform;
+}
+
+.link.hover .media {
+  opacity: .9;
+  transform: scale(1.2);
+  transition: all 500ms cubic-bezier(0.455, 0.030, 0.515, 0.955);
+  transition-property: opacity, transform;
 }
